name:                llvm-codegen
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:     LLVM.Codegen

  Cc-options:          
  Ghc-options:        -Wall
  Hs-source-dirs:      src

  default-language:    Haskell2010
  build-depends:       
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , mtl
    , transformers
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
