name:                llvm-codegen
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
Category:            Compilers, Code Generation
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/sdiehl/llvm-codegen.git

library 
  exposed-modules:
    LLVM.Codegen
    LLVM.Codegen.Instructions
    LLVM.Codegen.Module
    LLVM.Codegen.Types
    LLVM.Codegen.Constant
    LLVM.Codegen.Builder
    LLVM.Codegen.Logic
    LLVM.Codegen.NameSupply
    LLVM.Codegen.Pipeline
    LLVM.Codegen.Structure
    LLVM.Codegen.Array

  Cc-options:          
  -- Ghc-options:        -Wall
  Hs-source-dirs:      src

  default-language:    Haskell2010
  build-depends:       
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , mtl
    , transformers
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2

Test-Suite test
  type:                exitcode-stdio-1.0
  Hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , mtl
    , transformers
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , llvm-codegen      == 0.1.0.0
    , tasty
    , tasty-golden
    , tasty-hunit
