name:                llvm-codegen
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2013-2014 Stephen Diehl
Category:            Compilers/Interpreters, Code Generation
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/sdiehl/llvm-codegen.git

Flag lang
  Description: Compile example language
  Default:     False

Flag dsl
  Description: Compile dsl language
  Default:     False

library
  exposed-modules:
    LLVM.Codegen
    LLVM.Codegen.Module
    LLVM.Codegen.Types
    LLVM.Codegen.Constant
    LLVM.Codegen.Builder
    LLVM.Codegen.Instructions
    LLVM.Codegen.Comparison
    LLVM.Codegen.String
    LLVM.Codegen.Logic
    LLVM.Codegen.NameSupply
    LLVM.Codegen.Pipeline
    LLVM.Codegen.Structure
    LLVM.Codegen.Array
    LLVM.Codegen.Tuple
    LLVM.Codegen.Complex
    LLVM.Codegen.GC
    LLVM.Codegen.Boxed
    LLVM.Codegen.Intrinsics
    LLVM.Codegen.Execution
    LLVM.Codegen.Build

  Cc-options:
  -- Ghc-options:        -Wall -fwarn-monomorphism-restriction
  Hs-source-dirs:      src

  default-language:    Haskell2010
  build-depends:
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , vector            >= 0.10
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , libffi            == 0.1
    , unix              >= 2.4.0.2
    , transformers      >= 0.3
    , mtl


Test-Suite test
  type:                exitcode-stdio-1.0
  Hs-source-dirs:      test
  main-is:             Golden.hs
  default-language:    Haskell2010
  build-depends:
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , vector            >= 0.10
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , llvm-codegen      == 0.1.0.0
    , libffi            == 0.1
    , transformers      >= 0.3
    , mtl

    , tasty
    , tasty-golden
    , tasty-hunit

Test-Suite saxpy
  type:                exitcode-stdio-1.0
  Hs-source-dirs:      test
  main-is:             Saxpy.hs
  default-language:    Haskell2010
  build-depends:
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , vector            >= 0.10
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , llvm-codegen      == 0.1.0.0
    , libffi            == 0.1
    , transformers      >= 0.3
    , mtl

    , tasty
    , tasty-golden
    , tasty-hunit

executable vectorlang
  main-is:             Main.hs
  if flag(lang)
    Hs-source-dirs:      test/lang
    default-language:    Haskell2010
    build-depends:
        base              >= 4.6 && <4.7
      , containers        >= 0.5 && <0.6
      , vector            >= 0.10
      , llvm-general      >= 3.3.8.2
      , llvm-general-pure >= 3.3.8.2
      , llvm-codegen      == 0.1.0.0
      , libffi            == 0.1
      , haskeline         >= 0.7
      , parsec            >= 3.1 && <3.2
      , pretty-show       == 1.4.1
      , transformers      >= 0.3
      , mtl
  else
    buildable: False

executable simple
  main-is:             examples/Simple.hs
  default-language:    Haskell2010
  build-depends:
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , vector            >= 0.10
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , llvm-codegen      == 0.1.0.0
    , libffi            == 0.1
    , haskeline         >= 0.7
    , parsec            >= 3.1 && <3.2
    , pretty-show       == 1.4.1
    , transformers      >= 0.3
    , array             >= 0.4
    , mtl

executable dsl
  main-is:             dsl.hs
  default-language:    Haskell2010
  build-depends:
      base              >= 4.6 && <4.7
    , containers        >= 0.5 && <0.6
    , vector            >= 0.10
    , llvm-general      >= 3.3.8.2
    , llvm-general-pure >= 3.3.8.2
    , llvm-codegen      == 0.1.0.0
    , libffi            == 0.1
    , haskeline         >= 0.7
    , parsec            >= 3.1 && <3.2
    , pretty-show       == 1.4.1
    , transformers      >= 0.3
    , array             >= 0.4
    , mtl
